# Haskell-Algorithms

./: AlgorithmDesign.cabal  README.md  output.html  output2.html
app/: Main.hs
src/: GreedySch.hs  MaxInvestment.hs
test/: Spec.hs
