name:                AlgorithmDesign
version:             0.1.0.0
synopsis:            Implementation and benchmarking of multiple algorithms.
description:         Please see README.md
homepage:            
license:             BSD3
license-file:        LICENSE
author:              Evan Hines
maintainer:          evhiness@gmail.com
copyright:           2016 Evan Hines
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GreedySch, MaxInvestment
  build-depends:       base >= 4.7 && < 5
                     , parallel
  default-language:    Haskell2010

executable Alg.exe
  hs-source-dirs:      app, src
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , AlgorithmDesign
                     , parallel
                     , random
                     , QuickCheck
                     , parallel
                     , mtl
  other-modules:       GreedySch
                     , MaxInvestment
  default-language:    Haskell2010

test-suite Alg-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       base
                     , AlgorithmDesign
                     , QuickCheck
                     , random
                     , criterion
                     , parallel
                     , mtl
  other-modules:       GreedySch
                     , MaxInvestment
  ghc-options:         -O3 -threaded -Wall -rtsopts -with-rtsopts=-N4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ev-hines/AlgorithmDesign
